# java-to-pyi

./: Cargo.toml  README.md
java-ast-parser/: Cargo.toml
java-ast-parser/src/: ast.rs  java.lalrpop  lexer.rs  lib.rs
src/: index_table.rs  index_tree.rs  main.rs  preprocess.rs  pyi.rs  status.rs
