[package]
name = "java-ast-parser"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["java", "ast", "parser"]
categories = ["parser-implementations"]
description = "A Java parser that produces a typed AST without initializers and function bodies"
repository = "https://github.com/n08i40k/java2pyi"

[dependencies]
lalrpop-util = "0.22.2"
logos = "0.16.1"
ownable = "1.0.0"
bitflags = "2.10.0"
itertools = "0.14.0"

[build-dependencies]
lalrpop = "0.22.2"
